classDiagram
    %% REVIEW SERVICE
    class Review {
        -id: Long
        -bookId: Long
        -userId: Long
        -rating: Integer
        -reviewText: String
        -createdAt: LocalDateTime
        -updatedAt: LocalDateTime
        +getId(): Long
        +setId(id): void
        +getBookId(): Long
        +setBookId(bookId): void
        +getUserId(): Long
        +setUserId(userId): void
        +getRating(): Integer
        +setRating(rating): void
        +getReviewText(): String
        +setReviewText(reviewText): void
        +getCreatedAt(): LocalDateTime
        +getUpdatedAt(): LocalDateTime
    }

    class ReviewController {
        -reviewService: ReviewService
        +createReview(reviewRequestDTO, userEmail): ResponseEntity~ReviewResponseDTO~
        +getReviewById(id): ResponseEntity~ReviewResponseDTO~
        +getReviewsByBookId(bookId, page, size): ResponseEntity~Page~ReviewResponseDTO~~
        +getReviewsByUserId(userId, page, size): ResponseEntity~Page~ReviewResponseDTO~~
        +getMyReviews(userEmail, page, size): ResponseEntity~Page~ReviewResponseDTO~~
        +updateReview(id, reviewRequestDTO, userEmail): ResponseEntity~ReviewResponseDTO~
        +deleteReview(id, userEmail): ResponseEntity~Void~
    }

    class ReviewService {
        -reviewRepository: ReviewRepository
        -reviewMapper: ReviewMapper
        -bookClient: BookClient
        -userClient: UserClient
        +createReview(requestDTO, authenticatedUserEmail): ReviewResponseDTO
        +getReviewById(id): ReviewResponseDTO
        +getReviewsByBookId(bookId, page, size): Page~ReviewResponseDTO~
        +getReviewsByUserId(userId, page, size): Page~ReviewResponseDTO~
        +getMyReviews(authenticatedUserEmail, page, size): Page~ReviewResponseDTO~
        +updateReview(id, requestDTO, authenticatedUserEmail): ReviewResponseDTO
        +deleteReview(id, authenticatedUserEmail): void
    }

    class ReviewRepository {
        +findByBookId(bookId, pageable): Page~Review~
        +findByUserId(userId, pageable): Page~Review~
        +findByBookIdAndUserId(bookId, userId): Optional~Review~
        +existsByBookIdAndUserId(bookId, userId): boolean
        +findById(id): Optional~Review~
        +save(review): Review
        +deleteById(id): void
    }

    class ReviewMapper {
        +mapRequestDtoToReview(dto): Review
        +mapReviewToResponseDto(review): ReviewResponseDTO
    }

    class ReviewRequestDTO {
        +bookId: Long
        +userId: Long
        +rating: Integer
        +reviewText: String
    }

    class ReviewResponseDTO {
        +id: Long
        +bookId: Long
        +userId: Long
        +rating: Integer
        +reviewText: String
        +createdAt: LocalDateTime
        +updatedAt: LocalDateTime
    }

    class UserResponseDTO {
        +id: Long
        +username: String
        +email: String
    }

    class BookClient {
        +checkBookExists(id): ResponseEntity~Boolean~
    }

    class UserClient {
        +getUserById(id): ResponseEntity~UserResponseDTO~
        +getUserByEmail(email): ResponseEntity~UserResponseDTO~
    }

    %% EXCEPTIONS
    class ReviewNotFoundException {
        +ReviewNotFoundException(message: String)
    }

    class DuplicateReviewException {
        +DuplicateReviewException(message: String)
    }

    class ResourceNotFoundException {
        +ResourceNotFoundException(message: String)
    }

    class GlobalExceptionHandler {
        +handleReviewNotFoundException(ex, request): ResponseEntity~ErrorDetails~
        +handleDuplicateReviewException(ex, request): ResponseEntity~ErrorDetails~
        +handleResourceNotFoundException(ex, request): ResponseEntity~ErrorDetails~
        +handleGlobalException(ex, request): ResponseEntity~ErrorDetails~
    }

    class ErrorDetails {
        +timestamp: LocalDateTime
        +message: String
        +details: String
    }

    %% CONFIGURATION
    class OpenApiConfig {
        +customOpenAPI(): OpenAPI
    }

    class ReviewServiceApplication {
        +main(args): void
    }

    %% RELATIONSHIPS
    ReviewController --> ReviewService : uses
    ReviewService --> ReviewRepository : uses
    ReviewService --> ReviewMapper : uses
    ReviewService --> BookClient : validates book
    ReviewService --> UserClient : validates user
    ReviewRepository --> Review : manages
    ReviewMapper --> Review : maps to
    ReviewMapper --> ReviewRequestDTO : maps from
    ReviewMapper --> ReviewResponseDTO : maps to
    ReviewService --> UserResponseDTO : receives
    ReviewService ..> ReviewNotFoundException : throws
    ReviewService ..> DuplicateReviewException : throws
    ReviewService ..> ResourceNotFoundException : throws
    GlobalExceptionHandler --> ErrorDetails : creates
    GlobalExceptionHandler ..> ReviewNotFoundException : handles
    GlobalExceptionHandler ..> DuplicateReviewException : handles
    GlobalExceptionHandler ..> ResourceNotFoundException : handles
    ReviewServiceApplication ..> ReviewService : initializes

    %% NOTES
    note for Review "Unique constraint on (bookId, userId)\nEnsures one review per user per book\nrating: 1-5 integer validation\nreviewText: optional, max 2000 chars"
    note for ReviewService "Validates user ownership\nExtracts authenticated user from JWT\nEnforces business rules"
    note for ReviewController "All write operations require authentication\nUser email extracted from X-User-Email header\nPassed from API Gateway JWT validation"
